@@ -16,17 +16,16 @@
 
 package ca.uwaterloo.flix
 
-import java.io.{File, PrintWriter}
-import java.net.BindException
-import java.nio.file.Paths
-
 import ca.uwaterloo.flix.api.lsp.LanguageServer
-import ca.uwaterloo.flix.api.{Flix, Version}
-import ca.uwaterloo.flix.runtime.shell.Shell
+import ca.uwaterloo.flix.api.Version
+import ca.uwaterloo.flix.language.ast.Symbol
+import ca.uwaterloo.flix.runtime.shell.{Shell, SourceProvider}
 import ca.uwaterloo.flix.tools._
 import ca.uwaterloo.flix.util._
-import ca.uwaterloo.flix.util.vt._
-import flix.runtime.FlixError
+
+import java.io.File
+import java.net.BindException
+import java.nio.file.Paths
 
 /**
   * The main entry point for the Flix compiler and runtime.
@@ -66,7 +65,7 @@ object Main {
     // check if the --lsp flag was passed.
     if (cmdOpts.lsp.nonEmpty) {
       try {
-        val languageServer = new LanguageServer(cmdOpts.lsp.get)
+        val languageServer = new LanguageServer(cmdOpts.lsp.get, Options.Default)
         languageServer.run()
       } catch {
         case ex: BindException =>
@@ -75,150 +74,133 @@ object Main {
       System.exit(0)
     }
 
-    // the default color context.
-    implicit val terminal = TerminalContext.AnsiTerminal
-
-    // compute the enabled optimizations.
-    val optimizations = Optimization.All.filter {
-      case Optimization.TailCalls => !cmdOpts.xnotailcalls
+    // compute the main entry point
+    val entryPoint = cmdOpts.entryPoint match {
+      case None => Options.Default.entryPoint
+      case Some(s) => Some(Symbol.mkDefnSym(s))
     }
 
     // construct flix options.
-    val options = Options.Default.copy(
-      core = cmdOpts.xcore,
+    var options = Options(
+      lib = cmdOpts.xlib,
       debug = cmdOpts.xdebug,
       documentor = cmdOpts.documentor,
+      entryPoint = entryPoint,
+      explain = cmdOpts.explain,
+      incremental = Options.Default.incremental,
       json = cmdOpts.json,
-      optimizations = optimizations,
-      mode = if (cmdOpts.release) CompilationMode.Release else CompilationMode.Development,
-      quickchecker = cmdOpts.quickchecker,
-      threads = cmdOpts.threads.getOrElse(Runtime.getRuntime.availableProcessors()),
-      verbosity = if (cmdOpts.verbose) Verbosity.Verbose else Verbosity.Normal,
-      verifier = cmdOpts.verifier,
-      writeClassFiles = !cmdOpts.interactive,
-      xallowredundancies = cmdOpts.xallowredundancies,
-      xlinter = cmdOpts.xlinter,
-      xnoboolunification = cmdOpts.xnoboolunification,
-      xnostratifier = cmdOpts.xnostratifier,
-      xstatistics = cmdOpts.xstatistics
+      progress = true,
+      installDeps = cmdOpts.installDeps,
+      output = cmdOpts.output.map(s => Paths.get(s)),
+      target = Options.Default.target,
+      test = Options.Default.test,
+      threads = cmdOpts.threads.getOrElse(Options.Default.threads),
+      loadClassFiles = Options.Default.loadClassFiles,
+      xallowredundancies = Options.Default.xallowredundancies,
+      xbddthreshold = cmdOpts.xbddthreshold,
+      xboolclassic = cmdOpts.xboolclassic,
+      xnoboolcache = cmdOpts.xnoboolcache,
+      xnoboolspecialcases = cmdOpts.xnoboolspecialcases,
+      xnobooltable = cmdOpts.xnobooltable,
+      xnoboolunif = cmdOpts.xnoboolunif,
+      xnoqmc = cmdOpts.xnoqmc,
+      xnounittests = cmdOpts.xnounittests,
+      xstatistics = cmdOpts.xstatistics,
+      xstrictmono = cmdOpts.xstrictmono,
+      xnoseteffects = cmdOpts.xnoseteffects,
+      xnobooleffects = cmdOpts.xnobooleffects,
+      xnooptimizer = cmdOpts.xnooptimizer,
+      xvirtualthreads = cmdOpts.xvirtualthreads,
+      xprintasts = cmdOpts.xprintasts,
+      xprintboolunif = cmdOpts.xprintboolunif,
+      xflexibleregions = cmdOpts.xflexibleregions,
+      xsummary = cmdOpts.xsummary
     )
+
+    // Don't use progress bar if benchmarking.
+    if (cmdOpts.benchmark || cmdOpts.xbenchmarkCodeSize || cmdOpts.xbenchmarkIncremental || cmdOpts.xbenchmarkPhases || cmdOpts.xbenchmarkFrontend || cmdOpts.xbenchmarkThroughput) {
+      options = options.copy(progress = false)
+    }
+
+    // Don't use progress bar if not attached to a console.
+    if (System.console() == null) {
+      options = options.copy(progress = false)
+    }
+
+    val cwd = Paths.get(".").toAbsolutePath.normalize()
 
     // check if command was passed.
     try {
-      val cwd = Paths.get(".")
-
       cmdOpts.command match {
         case Command.None =>
-        // nop, continue
+          val result = SimpleRunner.run(cwd, cmdOpts, options)
+          System.exit(getCode(result))
 
         case Command.Init =>
-          Packager.init(cwd, options)
-          System.exit(0)
+          val result = Packager.init(cwd, options)
+          System.exit(getCode(result))
 
         case Command.Check =>
-          Packager.check(cwd, options)
-          System.exit(0)
+          val result = Packager.check(cwd, options)
+          System.exit(getCode(result))
 
         case Command.Build =>
-          Packager.build(cwd, options, loadClasses = false)
-          System.exit(0)
+          val result = Packager.build(cwd, options, loadClasses = false)
+          System.exit(getCode(result))
 
         case Command.BuildJar =>
-          Packager.buildJar(cwd, options)
-          System.exit(0)
+          val result = Packager.buildJar(cwd, options)
+          System.exit(getCode(result))
 
         case Command.BuildPkg =>
-          Packager.buildPkg(cwd, options)
-          System.exit(0)
+          val result = Packager.buildPkg(cwd, options)
+          System.exit(getCode(result))
 
         case Command.Run =>
-          Packager.run(cwd, options)
-          System.exit(0)
+          val result = Packager.run(cwd, options)
+          System.exit(getCode(result))
 
         case Command.Benchmark =>
-          Packager.benchmark(cwd, options)
-          System.exit(0)
+          val o = options.copy(progress = false)
+          val result = Packager.benchmark(cwd, o)
+          System.exit(getCode(result))
 
         case Command.Test =>
-          Packager.test(cwd, options) match {
-            case Tester.OverallTestResult.NoTests | Tester.OverallTestResult.Success => System.exit(0)
-            case Tester.OverallTestResult.Failure => System.exit(1)
+          val o = options.copy(progress = false)
+          val result = Packager.test(cwd, o)
+          System.exit(getCode(result))
+
+        case Command.Repl =>
+          val sourceProvider = if (cmdOpts.files.isEmpty) SourceProvider.ProjectPath(cwd) else SourceProvider.SourceFileList(cmdOpts.files)
+          val shell = new Shell(sourceProvider, options)
+          shell.loop()
+          System.exit(0)
+
+        case Command.Lsp(port) =>
+          val o = options.copy(progress = false)
+          try {
+            val languageServer = new LanguageServer(port, o)
+            languageServer.run()
+          } catch {
+            case ex: BindException =>
+              throw new RuntimeException(ex)
           }
+          System.exit(0)
+
       }
     } catch {
       case ex: RuntimeException =>
-        Console.println(ex.getMessage)
+        ex.printStackTrace()
         System.exit(1)
     }
+  }
 
-    // check if the -Xbenchmark-phases flag was passed.
-    if (cmdOpts.xbenchmarkPhases) {
-      BenchmarkCompiler.benchmarkPhases(options)
-      System.exit(0)
-    }
-
-    // check if the -Xbenchmark-throughput flag was passed.
-    if (cmdOpts.xbenchmarkThroughput) {
-      BenchmarkCompiler.benchmarkThroughput(options)
-      System.exit(0)
-    }
-
-    // check if running in interactive mode.
-    val interactive = cmdOpts.interactive || (cmdOpts.command == Command.None && cmdOpts.files.isEmpty)
-    if (interactive) {
-      val shell = new Shell(cmdOpts.files.toList.map(_.toPath), options)
-      shell.loop()
-      System.exit(0)
-    }
-
-    // configure Flix and add the paths.
-    val flix = new Flix()
-    flix.setOptions(options)
-    for (file <- cmdOpts.files) {
-      flix.addPath(file.toPath)
-    }
-
-    // evaluate main.
-    try {
-      val timer = new Timer(flix.compile())
-      timer.getResult match {
-        case Validation.Success(compilationResult) =>
-
-          compilationResult.getMain match {
-            case None => // nop
-            case Some(m) =>
-              // Compute the arguments to be passed to main.
-              val args: Array[String] = cmdOpts.args match {
-                case None => Array.empty
-                case Some(a) => a.split(" ")
-              }
-              // Invoke main with the supplied arguments.
-              val exitCode = m(args)
-
-              // Exit with the returned exit code.
-              System.exit(exitCode)
-          }
-
-          if (cmdOpts.benchmark) {
-            Benchmarker.benchmark(compilationResult, new PrintWriter(System.out, true))(options)
-          }
-
-          if (cmdOpts.test) {
-            val results = Tester.test(compilationResult)
-            Console.println(results.output.fmt)
-          }
-        case Validation.Failure(errors) =>
-          errors.sortBy(_.source.name).foreach(e => println(e.message.fmt))
-          println()
-          println(s"Compilation failed with ${errors.length} error(s).")
-          System.exit(1)
-      }
-    } catch {
-      case ex: FlixError =>
-        Console.println(ex.getMessage)
-        System.exit(1)
-    }
-
+  /**
+    * Extracts the exit code from the given result.
+    */
+  private def getCode(result: Result[_, Int]): Int = result match {
+    case Result.Ok(_) => 0
+    case Result.Err(code) => code
   }
 
   /**
@@ -228,27 +210,40 @@ object Main {
                      args: Option[String] = None,
                      benchmark: Boolean = false,
                      documentor: Boolean = false,
-                     interactive: Boolean = false,
+                     entryPoint: Option[String] = None,
+                     explain: Boolean = false,
+                     installDeps: Boolean = true,
                      json: Boolean = false,
                      listen: Option[Int] = None,
                      lsp: Option[Int] = None,
-                     quickchecker: Boolean = false,
-                     release: Boolean = false,
+                     output: Option[String] = None,
                      test: Boolean = false,
                      threads: Option[Int] = None,
-                     verbose: Boolean = false,
-                     verifier: Boolean = false,
-                     xallowredundancies: Boolean = false,
+                     xbenchmarkCodeSize: Boolean = false,
+                     xbenchmarkIncremental: Boolean = false,
                      xbenchmarkPhases: Boolean = false,
+                     xbenchmarkFrontend: Boolean = false,
                      xbenchmarkThroughput: Boolean = false,
-                     xcore: Boolean = false,
+                     xbddthreshold: Option[Int] = None,
+                     xlib: LibLevel = LibLevel.All,
                      xdebug: Boolean = false,
-                     xinvariants: Boolean = false,
-                     xnoboolunification: Boolean = false,
-                     xlinter: Boolean = false,
-                     xnostratifier: Boolean = false,
-                     xnotailcalls: Boolean = false,
+                     xboolclassic: Boolean = false,
+                     xnoboolcache: Boolean = false,
+                     xnoboolspecialcases: Boolean = false,
+                     xnobooltable: Boolean = false,
+                     xnoboolunif: Boolean = false,
+                     xnoqmc: Boolean = false,
+                     xnounittests: Boolean = false,
                      xstatistics: Boolean = false,
+                     xstrictmono: Boolean = false,
+                     xnoseteffects: Boolean = false,
+                     xnobooleffects: Boolean = false,
+                     xnooptimizer: Boolean = false,
+                     xvirtualthreads: Boolean = false,
+                     xprintasts: Set[String] = Set.empty,
+                     xprintboolunif: Boolean = false,
+                     xflexibleregions: Boolean = false,
+                     xsummary: Boolean = false,
                      files: Seq[File] = Seq())
 
   /**
@@ -276,6 +271,10 @@ object Main {
 
     case object Test extends Command
 
+    case object Repl extends Command
+
+    case class Lsp(port: Int) extends Command
+
   }
 
   /**
@@ -284,138 +283,193 @@ object Main {
     * @param args the arguments array.
     */
   def parseCmdOpts(args: Array[String]): Option[CmdOpts] = {
+    implicit val readInclusion: scopt.Read[LibLevel] = scopt.Read.reads {
+      case "nix" => LibLevel.Nix
+      case "min" => LibLevel.Min
+      case "all" => LibLevel.All
+      case arg => throw new IllegalArgumentException(s"'$arg' is not a valid library level. Valid options are 'all', 'min', and 'nix'.")
+    }
+
     val parser = new scopt.OptionParser[CmdOpts]("flix") {
 
       // Head
       head("The Flix Programming Language", Version.CurrentVersion.toString)
 
       // Command
-      cmd("init").action((_, c) => c.copy(command = Command.Init)).text("  create a new project in the current directory.")
+      cmd("init").action((_, c) => c.copy(command = Command.Init)).text("  creates a new project in the current directory.")
 
-      cmd("check").action((_, c) => c.copy(command = Command.Check)).text("  type checks the current project.")
+      cmd("check").action((_, c) => c.copy(command = Command.Check)).text("  checks the current project for errors.")
 
-      cmd("build").action((_, c) => c.copy(command = Command.Build)).text("  build the current project.")
+      cmd("build").action((_, c) => c.copy(command = Command.Build)).text("  builds (i.e. compiles) the current project.")
 
-      cmd("build-jar").action((_, c) => c.copy(command = Command.BuildJar)).text("  build a jar-file for the current project.")
+      cmd("build-jar").action((_, c) => c.copy(command = Command.BuildJar)).text("  builds a jar-file from the current project.")
 
-      cmd("build-pkg").action((_, c) => c.copy(command = Command.BuildPkg)).text("  build a fpkg-file for the current project.")
+      cmd("build-pkg").action((_, c) => c.copy(command = Command.BuildPkg)).text("  builds a fpkg-file from the current project.")
 
-      cmd("run").action((_, c) => c.copy(command = Command.Run)).text("  run main for the current project.")
+      cmd("run").action((_, c) => c.copy(command = Command.Run)).text("  runs main for the current project.")
 
-      cmd("benchmark").action((_, c) => c.copy(command = Command.Benchmark)).text("  run benchmarks for the current project.")
+      cmd("benchmark").action((_, c) => c.copy(command = Command.Benchmark)).text("  runs the benchmarks for the current project.")
 
-      cmd("test").action((_, c) => c.copy(command = Command.Test)).text("  run tests for the current project.")
+      cmd("test").action((_, c) => c.copy(command = Command.Test)).text("  runs the tests for the current project.")
+
+      cmd("repl").action((_, c) => c.copy(command = Command.Repl)).text("  starts a repl for the current project, or provided Flix source files.")
+
+      cmd("lsp").text("  starts the LSP server and listens on the given port.")
+        .children(
+          arg[Int]("port").action((port, c) => c.copy(command = Command.Lsp(port)))
+            .required()
+        )
 
       note("")
 
-      // Listen.
       opt[String]("args").action((s, c) => c.copy(args = Some(s))).
         valueName("<a1, a2, ...>").
         text("arguments passed to main. Must be a single quoted string.")
 
-      // Benchmark.
       opt[Unit]("benchmark").action((_, c) => c.copy(benchmark = true)).
         text("runs benchmarks.")
 
-      // Doc.
       opt[Unit]("doc").action((_, c) => c.copy(documentor = true)).
         text("generates HTML documentation.")
 
-      // Help.
+      opt[String]("entrypoint").action((s, c) => c.copy(entryPoint = Some(s))).
+        text("specifies the main entry point.")
+
+      opt[Unit]("explain").action((_, c) => c.copy(explain = true)).
+        text("provides suggestions on how to solve a problem")
+
       help("help").text("prints this usage information.")
 
-      // Interactive.
-      opt[Unit]("interactive").action((f, c) => c.copy(interactive = true)).
-        text("enables interactive mode.")
-
-      // Json.
-      opt[Unit]("json").action((f, c) => c.copy(json = true)).
+      opt[Unit]("json").action((_, c) => c.copy(json = true)).
         text("enables json output.")
 
-      // Listen.
       opt[Int]("listen").action((s, c) => c.copy(listen = Some(s))).
         valueName("<port>").
         text("starts the socket server and listens on the given port.")
 
-      // LSP.
       opt[Int]("lsp").action((s, c) => c.copy(lsp = Some(s))).
         valueName("<port>").
         text("starts the LSP server and listens on the given port.")
 
-      // Quickchecker.
-      opt[Unit]("quickchecker").action((_, c) => c.copy(quickchecker = true)).
-        text("enables the quickchecker.")
+      opt[String]("output").action((s, c) => c.copy(output = Some(s))).
+        text("specifies the output directory for JVM bytecode.")
 
-      // Release.
-      opt[Unit]("release").action((_, c) => c.copy(release = true)).
-        text("enables release mode.")
-
-      // Test.
       opt[Unit]("test").action((_, c) => c.copy(test = true)).
         text("runs unit tests.")
 
-      // Threads.
       opt[Int]("threads").action((n, c) => c.copy(threads = Some(n))).
-        text("number of threads for compilation.")
+        text("number of threads to use for compilation.")
 
-      // Verbose.
-      opt[Unit]("verbose").action((_, c) => c.copy(verbose = true))
-        .text("enables verbose output.")
+      opt[Unit]("no-install").action((_, c) => c.copy(installDeps = false)).
+        text("disables automatic installation of dependencies.")
 
-      // Verifier.
-      opt[Unit]("verifier").action((_, c) => c.copy(verifier = true)).
-        text("enables the verifier.")
-
-      // Version.
       version("version").text("prints the version number.")
 
       // Experimental options:
       note("")
       note("The following options are experimental:")
 
-      // Xallow-redundancies.
-      opt[Unit]("Xallow-redundancies").action((_, c) => c.copy(xallowredundancies = true)).
-        text("[experimental] disables the redundancies checker.")
+      // Xbenchmark-code-size
+      opt[Unit]("Xbenchmark-code-size").action((_, c) => c.copy(xbenchmarkCodeSize = true)).
+        text("[experimental] benchmarks the size of the generated JVM files.")
+
+      // Xbenchmark-incremental
+      opt[Unit]("Xbenchmark-incremental").action((_, c) => c.copy(xbenchmarkIncremental = true)).
+        text("[experimental] benchmarks the performance of each compiler phase in incremental mode.")
 
       // Xbenchmark-phases
       opt[Unit]("Xbenchmark-phases").action((_, c) => c.copy(xbenchmarkPhases = true)).
-        text("[experimental] benchmarks each individual compiler phase.")
+        text("[experimental] benchmarks the performance of each compiler phase.")
+
+      // Xbenchmark-frontend
+      opt[Unit]("Xbenchmark-frontend").action((_, c) => c.copy(xbenchmarkFrontend = true)).
+        text("[experimental] benchmarks the performance of the frontend.")
 
       // Xbenchmark-throughput
       opt[Unit]("Xbenchmark-throughput").action((_, c) => c.copy(xbenchmarkThroughput = true)).
-        text("[experimental] benchmarks the throughput of the entire compiler.")
-
-      // Xcore.
-      opt[Unit]("Xcore").action((_, c) => c.copy(xcore = true)).
-        text("[experimental] disables loading of all non-essential namespaces.")
+        text("[experimental] benchmarks the performance of the entire compiler.")
 
       // Xdebug.
       opt[Unit]("Xdebug").action((_, c) => c.copy(xdebug = true)).
-        text("[experimental] enables output of debugging information.")
+        text("[experimental] enables compiler debugging output.")
 
-      // Xinvariants.
-      opt[Unit]("Xinvariants").action((_, c) => c.copy(xinvariants = true)).
-        text("[experimental] enables compiler invariants.")
+      // Xflexible-regions
+      opt[Unit]("Xflexible-regions").action((_, c) => c.copy(xflexibleregions = true)).
+        text("[experimental] uses flexible variables for regions")
 
-      // Xlinter.
-      opt[Unit]("Xlinter").action((_, c) => c.copy(xlinter = true)).
-        text("[experimental] enables the semantic linter.")
-
-      // Xno-effects
-      opt[Unit]("Xno-bool-unification").action((_, c) => c.copy(xnoboolunification = true)).
-        text("[experimental] disables bool unification.")
-
-      // Xno-stratifier
-      opt[Unit]("Xno-stratifier").action((_, c) => c.copy(xnostratifier = true)).
-        text("[experimental] disables computation of stratification.")
-
-      // Xno-tailcalls
-      opt[Unit]("Xno-tailcalls").action((_, c) => c.copy(xnotailcalls = true)).
-        text("[experimental] disables tail call elimination.")
+      // Xlib
+      opt[LibLevel]("Xlib").action((arg, c) => c.copy(xlib = arg)).
+        text("[experimental] controls the amount of std. lib. to include (nix, min, all).")
 
       // Xstatistics
       opt[Unit]("Xstatistics").action((_, c) => c.copy(xstatistics = true)).
-        text("[experimental] prints statistics about the compilation.")
+        text("[experimental] prints compilation statistics.")
+
+      // Xstrictmono
+      opt[Unit]("Xstrictmono").action((_, c) => c.copy(xstrictmono = true)).
+        text("[experimental] enables strict monomorphization.")
+
+      // Xno-set-effects
+      opt[Unit]("Xno-set-effects").action((_, c) => c.copy(xnoseteffects = true)).
+        text("[experimental] disables set effects.")
+
+      // Xno-bool-effects
+      opt[Unit]("Xno-bool-effects").action((_, c) => c.copy(xnobooleffects = true)).
+        text("[experimental] disables bool effects.")
+
+      // Xno-optimizer
+      opt[Unit]("Xno-optimizer").action((_, c) => c.copy(xnooptimizer = true)).
+        text("[experimental] disables compiler optimizations")
+
+      // Xvirtual-threads
+      opt[Unit]("Xvirtual-threads").action((_, c) => c.copy(xvirtualthreads = true)).
+        text("[experimental] enables virtual threads (requires Java 19 with `--enable-preview`.)")
+
+      // xprint-asts
+      opt[Seq[String]]("Xprint-asts").action((m, c) => c.copy(xprintasts = m.toSet))
+
+      // Xprint-bool-unif
+      opt[Unit]("Xprint-bool-unif").action((m, c) => c.copy(xprintboolunif = true)).
+        text("[experimental] prints boolean unification queries")
+
+      //
+      // Boolean unification flags.
+      //
+      // Xbool-classic
+      opt[Unit]("Xbool-classic").action((_, c) => c.copy(xboolclassic = true)).
+        text("[experimental] enable classic Boolean unification (as published in 2020).")
+
+      // Xbdd-threshold
+      opt[Int]("Xbdd-threshold").action((n, c) => c.copy(xbddthreshold = Some(n))).
+        text("[experimental] sets the threshold for when to use BDDs.")
+
+      // Xno-bool-cache
+      opt[Unit]("Xno-bool-cache").action((_, c) => c.copy(xnoboolcache = true)).
+        text("[experimental] disables Boolean caches.")
+
+      // Xno-bool-specialcases
+      opt[Unit]("Xno-bool-specialcases").action((_, c) => c.copy(xnoboolspecialcases = true)).
+        text("[experimental] disables hardcoded Boolean unification special cases.")
+
+      // Xno-bool-table
+      opt[Unit]("Xno-bool-table").action((_, c) => c.copy(xnobooltable = true)).
+        text("[experimental] disables Boolean minimization via tabling.")
+
+      // Xno-bool-unif
+      opt[Unit]("Xno-bool-unif").action((_, c) => c.copy(xnoboolunif = true)).
+        text("[experimental] disables Boolean unification. (DO NOT USE).")
+
+      // Xno-unit-tests
+      opt[Unit]("Xno-unit-tests").action((_, c) => c.copy(xnounittests = true)).
+        text("[experimental] excludes unit tests from performance benchmarks.")
+
+      // Xno-qmc
+      opt[Unit]("Xno-qmc").action((_, c) => c.copy(xnoqmc = true)).
+        text("[experimental] disables Quine McCluskey when using BDDs.")
+
+      // Xsummary
+      opt[Unit]("Xsummary").action((_, c) => c.copy(xsummary = true)).
+        text("[experimental] prints a summary of the compiled modules.")
 
       note("")
 
@@ -423,7 +477,7 @@ object Main {
       arg[File]("<file>...").action((x, c) => c.copy(files = c.files :+ x))
         .optional()
         .unbounded()
-        .text("input Flix source code files.")
+        .text("input Flix source code files, Flix packages, and Java archives.")
 
     }
 
